[gd_scene load_steps=6 format=3 uid="uid://x2py778kdk8d"]

[ext_resource type="Script" path="res://scripts/Spell System/Projectiles/HomingProjectile.gd" id="1_i74c8"]
[ext_resource type="Texture2D" uid="uid://cwf11u7q8vmsp" path="res://aseprite/Tilemap.png" id="2_akole"]

[sub_resource type="CircleShape2D" id="CircleShape2D_osyke"]
radius = 4.52769

[sub_resource type="AtlasTexture" id="AtlasTexture_63aqo"]
atlas = ExtResource("2_akole")
region = Rect2(0, 144, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_0lldd"]

[node name="HomingProjectile" type="Area2D"]
collision_layer = 0
collision_mask = 11
script = ExtResource("1_i74c8")
speed = 200.0
time_limit = 10.0
damage = 20
detection_range = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("CircleShape2D_osyke")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_63aqo")

[node name="Timer" type="Timer" parent="."]

[node name="detection range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection range"]
position = Vector2(-0.5, -0.5)
shape = SubResource("CircleShape2D_0lldd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="detection range" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="detection range" to="." method="_on_detection_range_body_exited"]
